<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:padding="15dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/make_your_own_quiz_text" />

    <EditText
        android:id="@+id/editOriginalWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/original_word_field"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTranslatedWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/translated_word_field"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editDefinition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/definition_field"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/makeManualQuiz"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:text="@string/make_quiz" />

    <Button
        android:id="@+id/viewQuiz"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:text="@string/view_quiz_button" />
</LinearLayout>