<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/relativeLayout2"
        app:layout_anchorGravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spinner"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/select_a_language"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.893" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="167dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="121dp"
            android:layout_marginBottom="552dp"
            app:layout_constraintBottom_toTopOf="@+id/selectLangBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/selectLangBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/availableRoom"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="109dp"
            android:text="@string/create_room_Btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <ListView
            android:id="@+id/availableRoom"
            android:layout_width="365dp"
            android:layout_height="271dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="84dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/selectLangBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="-129dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/available_rooms"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/availableRoom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectLangBtn" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="-3dp">

            <include layout="@layout/layout_navigation_bar" />

        </RelativeLayout>




    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>